2009-Jan-28	weaver	Tag V00-06-01.  zerocopy/dma_splice can now queue sparsely and
			share "release arguments" across many queued buffers.
			camera/DmaSplice,Frame,TwoDMoments added to support camera 
			feature extraction.  xtc/PayloadIterator added; CDatagramIterator 
			inherits from it.
2009-Jan-13	weaver	Tag V00-06-00.  Many changes to zero-copy eb including new
			dma_splice kernel module.
2008-Dec-19     cpo     Changes to evgr to support opcodes with rates
                        of 1,5,10,15,30,60,120,240Hz.  Also fix
                        for acqiris "Flags has been modified" warning and
                        bugs in Fsm.
2008-Nov-14     cpo     Tag V00-05-00.  Many changes to support exporting data to offline.
2008-Oct-28	weaver  Tag V00-04-00.  Fixed EbKey/Server dependencies.  Renamed InXtc->Xtc.
2008-Oct-27     cpo     Tag V00-03-01.  Forgot to add AcqServer files and
                        DmaEngine in utility.
2008-Oct-27     cpo     Tag V00-03-00.  Add support for evg/evr/acqiris.
2008-Oct-21	weaver  Tag V00-02-02.  Minor fixes to event builder error handling and 
			network buffering.
2008-Oct-15	weaver  Tag V00-02-01.  Many fixes and changes for platform model.
2008-Oct-10	weaver  Tag V00-02-00.  Collection added platforms.  First commit
			of zero-copy event builders.  Also added zerocopy/tub as
			a buffer between pipes.
2008-Sep 24	weaver  Tag V00-01-00.  Many changes to event builders and levels.
2008-Sep-12	weaver	Initial import of utility, xtc, client, management code.
2008-Sep-09	weaver	Tag V00-00-00.  Initial import of service and collection code.